--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "live-server": "^1.2.1",
     "npm-install": "^1.4.0",
     "vue": "^2.6.11",
+    "vue-expandable-image": "^0.1.0",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
