--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "npm-install": "^1.4.0",
     "vue": "^2.6.11",
     "vue-expandable-image": "^0.1.0",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-babel": "^4.2.3",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
