--- a/package.json
+++ b/package.json
@@ -9,33 +9,41 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "main": "babel.config.js",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "live-server": "^1.2.1",
+    "lodash": "^4.17.15",
+    "node": "^12.18.0",
     "npm-install": "^1.4.0",
+    "resolve-url": "^0.2.1",
     "vue": "^2.6.11",
     "vue-expandable-image": "^0.1.0",
+    "vue-pdf": "^4.0.9",
     "vue-router": "^3.1.6",
     "vuex": "^3.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.3.1",
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
+    "raw-loader": "^4.0.1",
+    "typescript": "^3.9.5",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.42.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "worker-loader": "^2.0.0"
   },
   "eslintConfig": {
     "root": true,
@@ -64,5 +72,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/InkPi/portfolioTwo.git"
-  }
+  },
+  "keywords": []
 }
