--- a/package.json
+++ b/package.json
@@ -6,39 +6,51 @@
   "author": "",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "develop": "webpack --mode development --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.22.0",
-    "@typescript-eslint/parser": "^2.22.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "css-loader": "^3.6.0",
     "live-server": "^1.2.1",
     "lodash": "^4.17.15",
     "node": "^12.18.0",
-    "npm-install": "^1.4.0",
+    "npm-install": "^1.4.1",
     "resolve-url": "^0.2.1",
+    "style-loader": "^1.2.1",
     "vue": "^2.6.11",
     "vue-expandable-image": "^0.1.0",
-    "vue-pdf": "^4.0.9",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.2.0"
+    "vue-js-modal": "^2.0.0-rc.3",
+    "vue-pdf": "^4.0.12",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@vue/cli-plugin-babel": "^4.3.1",
-    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@babel/preset-env": "^7.10.2",
+    "@vue/cli-plugin-babel": "^4.4.4",
+    "@vue/cli-plugin-eslint": "^4.4.4",
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
+    "file-loader": "^4.3.0",
+    "lodash-es": "^4.17.15",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
     "typescript": "^3.9.5",
+    "url-loader": "2.2.0",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
@@ -73,5 +85,6 @@
     "type": "git",
     "url": "git+https://github.com/InkPi/portfolioTwo.git"
   },
-  "keywords": []
+  "keywords": [],
+  "main": "babel.config.js"
 }
