--- a/package.json
+++ b/package.json
@@ -18,42 +18,42 @@
     "core-js": "^3.6.4",
     "css-loader": "^3.6.0",
     "live-server": "^1.2.1",
-    "lodash": "^4.17.15",
-    "node": "^12.18.0",
-    "npm-install": "^1.4.1",
+    "lodash": "^4.17.20",
+    "node": "^12.18.3",
+    "npm-install": "^1.4.3",
     "resolve-url": "^0.2.1",
     "style-loader": "^1.2.1",
     "vue": "^2.6.11",
     "vue-expandable-image": "^0.1.0",
-    "vue-js-modal": "^2.0.0-rc.3",
-    "vue-pdf": "^4.0.12",
-    "vue-router": "^3.3.4",
-    "vuex": "^3.4.0"
+    "vue-js-modal": "^2.0.0-rc.6",
+    "vue-pdf": "^4.1.0",
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
-    "@babel/core": "^7.10.2",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.10.2",
-    "@vue/cli-plugin-babel": "^4.4.4",
-    "@vue/cli-plugin-eslint": "^4.4.4",
+    "@babel/preset-env": "^7.11.0",
+    "@vue/cli-plugin-babel": "^4.5.4",
+    "@vue/cli-plugin-eslint": "^4.5.4",
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^4.3.0",
     "lodash-es": "^4.17.15",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
-    "typescript": "^3.9.5",
-    "url-loader": "2.2.0",
+    "typescript": "^3.9.7",
+    "url-loader": "^2.2.0",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.10.3",
     "worker-loader": "^2.0.0"
   },
